tests/valid/module_d.m
:- module module_d.
:- interface.
:- type module_d__foo == int.

